[metadata]
name = PyAltiumRunTop
version = 0.1.4
description = A library that can run scripts in altium designer
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Gybels,wqh0109663
author_email = dylangybels@gmail.com,wqh0109663@gmail.com
updateby = wqh0109663
url = https://github.com/wqh0109663/PyAltiumRun
keywords =
    Altium
    Scripting
    Runner
license = MIT
license_files = LICENSE
platforms = win32
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages =
    PyAltiumRunTop
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
* = *.pas
PyAltiumRun = py.typed

[flake8]
max-line-length = 160
count = True
ignore =
indent-size = 4
statistics = True
doctests = True
